tests/NormalTests/paczka1/small_fuzzy/29968763.err
Error in line 7: V8f S6 21,2
Error in line 6: 1ZkrrIGH A109 30,7
Error in line 16: Y9owmA54b S6 -1,2
